<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_addHobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="70dp"
        android:textSize="30dp"
        android:text="@string/add_hobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_hobbyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:paddingTop="90dp"
        android:textSize="20dp"
        android:inputType="textPersonName"
        android:hint="@string/new_hobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_addHobby" />

    <Button
        android:id="@+id/btn_addHobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/add_hobby_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hobbyName" />

    <Button
        android:id="@+id/btn_viewHobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_hobby"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hobbyName" />
</androidx.constraintlayout.widget.ConstraintLayout>